@@ -1,7 +1,8 @@
 # Pull base image
 FROM ubuntu:14.04
 
-MAINTAINER Sebastian Helzle sebastian@helzle.net
+MAINTAINER Sebastian Helzle <sebastian@helzle.net>
+MAINTAINER Visay Keo        <visay@web-essentials.asia>
 
 # Install packages as per recommendation (https://docs.docker.com/articles/dockerfile_best-practices/)
 # And clean up APT
@@ -16,17 +17,17 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     php5-curl \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
+# Set workdir to project root
+WORKDIR /var/www
+
 # Copy configuration files for php
-COPY Configuration/App/php.ini Configuration/App/php-fpm.conf /etc/php5/fpm/
+COPY Configuration/App/php.ini      Configuration/App/php-fpm.conf /etc/php5/fpm/
 COPY Configuration/App/www.conf     /etc/php5/fpm/pool.d/
 COPY Configuration/App/php-cli.ini  /etc/php5/cli/
 
-# Script which wraps all commands
-COPY Scripts/entrypoint.sh /usr/local/bin/
-ENTRYPOINT ["/bin/bash", "/usr/local/bin/entrypoint.sh"]
+# Entry point script which wraps all commands for app container
+COPY Scripts/EntryPoint/app.sh /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
 
 # By default start php-fpm
-CMD php5-fpm
-
-# Set workdir to project root
-WORKDIR /var/www
+CMD ["php5-fpm"]
