@@ -4,6 +4,7 @@ CHANGELOG
 0.1.0-dev
 ---------
 
+  - [FEATURE]   Extend db entrypoint to support multiple database creation
   - [TASK]      Create nginx vhost for testing context
   - [TASK]      Add libcurl
   - [BUGFIX]    Flow context doesn't pass through the one-off command
